deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hhq
  namespace: hhq
spec:
  selector:
    app: hhq
  ports:
    - name: http
      port: 80
      targetPort: http
